--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,48 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-	<display-name>computer-database</display-name>
-	<welcome-file-list>
-		<welcome-file>computers</welcome-file>
-	</welcome-file-list>
-
-	<servlet>
-		<servlet-name>ListComputersServlet</servlet-name>
-		<servlet-class>com.excilys.projet.computerdb.servlet.ListComputersServlet</servlet-class>
-	</servlet>	
-	
-	<servlet>
-		<servlet-name>UpdateComputerServlet</servlet-name>
-		<servlet-class>com.excilys.projet.computerdb.servlet.UpdateComputerServlet</servlet-class>
-	</servlet>	
-
-	<servlet>
-		<servlet-name>DeleteComputerServlet</servlet-name>
-		<servlet-class>com.excilys.projet.computerdb.servlet.DeleteComputerServlet</servlet-class>
-	</servlet>
-
-	<servlet>
-		<servlet-name>InsertComputerServlet</servlet-name>
-		<servlet-class>com.excilys.projet.computerdb.servlet.InsertComputerServlet</servlet-class>
-	</servlet>	
-
-	<servlet-mapping>
-		<servlet-name>ListComputersServlet</servlet-name>
-		<url-pattern>/computers</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>UpdateComputerServlet</servlet-name>
-		<url-pattern>/update</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>DeleteComputerServlet</servlet-name>
-		<url-pattern>/delete</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>InsertComputerServlet</servlet-name>
-		<url-pattern>/new</url-pattern>
-	</servlet-mapping>
-
+<web-app id="WebApp_ID" version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+    <display-name>computer-database</display-name>
+    <welcome-file-list>
+        <welcome-file>computers</welcome-file>
+    </welcome-file-list>
+    <servlet>
+        <servlet-name>ListComputersServlet</servlet-name>
+        <servlet-class>com.excilys.projet.computerdb.servlet.ListComputersServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UpdateComputerServlet</servlet-name>
+        <servlet-class>com.excilys.projet.computerdb.servlet.UpdateComputerServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DeleteComputerServlet</servlet-name>
+        <servlet-class>com.excilys.projet.computerdb.servlet.DeleteComputerServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>InsertComputerServlet</servlet-name>
+        <servlet-class>com.excilys.projet.computerdb.servlet.InsertComputerServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ListComputersServlet</servlet-name>
+        <url-pattern>/computers</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateComputerServlet</servlet-name>
+        <url-pattern>/update</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DeleteComputerServlet</servlet-name>
+        <url-pattern>/delete</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>InsertComputerServlet</servlet-name>
+        <url-pattern>/new</url-pattern>
+    </servlet-mapping>
 </web-app>
