--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.25</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.jolbox</groupId>
+			<artifactId>bonecp</artifactId>
+			<version>0.8.0-rc1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
