MVC: Controllers + DispatcherServlet + Corrections bugs divers

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<junit.version>4.11</junit.version>
 		<jdk.version>1.7</jdk.version>
 		<slf4j.version>1.7.5</slf4j.version>
+	 <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
 	</properties>
 
 	<dependencies>
@@ -60,7 +61,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>jstl</groupId>
+			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
@@ -88,7 +89,7 @@
 
 	<build>
 	
-		<finalName>${artifactId}-${version}</finalName>
+		<finalName>${project.artifactId}-${project.version}</finalName>
 
 		<plugins>
 			<plugin>
