--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,89 +4,36 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 	
-	<display-name>computer-database</display-name>
-	
-  	<context-param>
+    <display-name>computer-database</display-name>
+
+    <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:spring-context.xml</param-value>
     </context-param>
-	
-	<welcome-file-list>
-		<welcome-file>computers</welcome-file>
-	</welcome-file-list>
-	
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-	
-	<servlet>
-		<servlet-name>ListComputersServlet</servlet-name>
-		<servlet-class>com.excilys.projet.computerdb.servlet.ListComputersServlet</servlet-class>
-	</servlet>
 
-	<servlet>
-		<servlet-name>UpdateComputerServlet</servlet-name>
-		<servlet-class>com.excilys.projet.computerdb.servlet.UpdateComputerServlet</servlet-class>
-	</servlet>
+    <!-- MVC Servlets -->
 
-	<servlet>
-		<servlet-name>DeleteComputerServlet</servlet-name>
-		<servlet-class>com.excilys.projet.computerdb.servlet.DeleteComputerServlet</servlet-class>
-	</servlet>
+    <servlet>
+        <servlet-name>mvc-dispatcher</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
 
-	<servlet>
-		<servlet-name>InsertComputerServlet</servlet-name>
-		<servlet-class>com.excilys.projet.computerdb.servlet.InsertComputerServlet</servlet-class>
-	</servlet>
+    <servlet-mapping>
+        <servlet-name>mvc-dispatcher</servlet-name>
+        <url-pattern>/x/*</url-pattern>
+    </servlet-mapping>
 
-	<servlet>
-		<servlet-name>UpdateCompanyServlet</servlet-name>
-		<servlet-class>com.excilys.projet.computerdb.servlet.UpdateCompanyServlet</servlet-class>
-	</servlet>
 
-	<servlet>
-		<servlet-name>DeleteCompanyServlet</servlet-name>
-		<servlet-class>com.excilys.projet.computerdb.servlet.DeleteCompanyServlet</servlet-class>
-	</servlet>
+    <!-- HttpServlets -->
 
-	<servlet>
-		<servlet-name>TestServlet</servlet-name>
-		<servlet-class>com.excilys.projet.computerdb.servlet.TestServlet</servlet-class>
-	</servlet>
+    <welcome-file-list>
+            <welcome-file>x/home</welcome-file>
+    </welcome-file-list>
 
-	<servlet-mapping>
-		<servlet-name>TestServlet</servlet-name>
-		<url-pattern>/test</url-pattern>
-	</servlet-mapping>
+    <listener>
+            <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 
-	<servlet-mapping>
-		<servlet-name>DeleteCompanyServlet</servlet-name>
-		<url-pattern>/deletecie</url-pattern>
-	</servlet-mapping>
-
-	<servlet-mapping>
-		<servlet-name>UpdateCompanyServlet</servlet-name>
-		<url-pattern>/companies</url-pattern>
-	</servlet-mapping>
-
-	<servlet-mapping>
-		<servlet-name>ListComputersServlet</servlet-name>
-		<url-pattern>/computers</url-pattern>
-	</servlet-mapping>
-
-	<servlet-mapping>
-		<servlet-name>UpdateComputerServlet</servlet-name>
-		<url-pattern>/update</url-pattern>
-	</servlet-mapping>
-
-	<servlet-mapping>
-		<servlet-name>DeleteComputerServlet</servlet-name>
-		<url-pattern>/delete</url-pattern>
-	</servlet-mapping>
-
-	<servlet-mapping>
-		<servlet-name>InsertComputerServlet</servlet-name>
-		<url-pattern>/new</url-pattern>
-	</servlet-mapping>
 
 </web-app>
