--- a/daoImpl/pom.xml
+++ b/daoImpl/pom.xml
@@ -15,6 +15,11 @@
 			<artifactId>dao</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-
+				
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		
 	</dependencies>
 </project>
