--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 	
 	<properties>
 		<spring.version>3.2.2.RELEASE</spring.version>
+		<hibernate.version>4.2.1.Final</hibernate.version>
 		<jdk.version>1.7</jdk.version>
 		<slf4j.version>1.7.5</slf4j.version>
 	</properties>
@@ -85,6 +86,18 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
+		</dependency>
+		
+		<dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        
+        <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+            <version>${spring.version}</version>
 		</dependency>
 
 	</dependencies>
